# doppel-gamble

./: .env.example  .gitignore  README.md  pyproject.toml
src/doppel_gamble/: config.py  export.py  pipeline.py
src/doppel_gamble/db/: models.py  repository.py  schema.sql
src/doppel_gamble/parsers/: llm_parser.py  prompts.py
src/doppel_gamble/scrapers/: base.py  hendonmob.py  pokernews.py  youtube.py
tests/: conftest.py  test_export.py  test_hendonmob.py  test_llm_parser.py  test_pokernews.py  test_repository.py  test_youtube.py
tests/fixtures/: hendonmob_player_53.html  pokernews_hand_update.html  youtube_transcript.vtt
