[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doppel-gamble"
version = "0.1.0"
description = "Poker player data extraction pipeline"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "anthropic>=0.42",
    "yt-dlp>=2024.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
doppel-gamble = "doppel_gamble.pipeline:main"
doppel-export = "doppel_gamble.export:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
